package ar.edu.utn.frba.dds.fuentes;

public interface Calendarizable {

  Boolean tocaActualizar();
  void actualizar();
}
