package ar.edu.utn.frba.dds.hechos;

public enum Origen {
  MANUAL, DATASET, CONTRIBUYENTE
}
